monitoric for dashboards

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -10,8 +10,8 @@ services:
       - postgres
     working_dir: /usr/src/app
     ports:
-      - "${APP_PORT}:3000"     # NestJS + Swagger
-      - "${STUDIO_PORT}:5555"  # Prisma Studio
+      - "${APP_PORT}:3000"
+      - "${STUDIO_PORT}:5555"
     volumes:
       - ../:/usr/src/app
     command: sh docker/entrypoint.sh
@@ -25,6 +25,29 @@ services:
       - "${DB_PORT}:5432"
     volumes:
       - docker_pgdata:/var/lib/postgresql/data
+
+  prometheus:
+    image: prom/prometheus
+    container_name: booking_prometheus
+    restart: unless-stopped
+    volumes: 
+      - ../monitoring/prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+    depends_on:
+      - app
+
+  grafana:
+    image: grafana/grafana
+    container_name: booking_grafana
+    restart: unless-stopped
+    ports: 
+      - "3001:3000"
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+    depends_on:
+      - prometheus
 
   test:
     build:
@@ -40,586 +63,3 @@ services:
 
 volumes:
   docker_pgdata:
-
-
-
-
-
-
-
-
-
-
-# services:
-#   app:
-#     build:
-#       context: ..
-#       dockerfile: docker/Dockerfile
-#     container_name: booking_app
-#     env_file:
-#       - ../.env
-#     depends_on:
-#       - postgres
-#     working_dir: /usr/src/app
-#     ports:
-#       - "${APP_PORT}:3000"
-#       - "${STUDIO_PORT}:5555"
-#     volumes:
-#       - ../:/usr/src/app
-#     command: sh docker/entrypoint.sh
-
-#   postgres:
-#     image: postgres:16
-#     container_name: booking_postgres
-#     env_file:
-#       - ../.env
-#     ports:
-#       - "${DB_PORT}:5432"
-#     volumes:
-#       - docker_pgdata:/var/lib/postgresql/data
-
-  # prisma-studio:
-  #   image: node:20-alpine
-  #   container_name: booking_prisma_studio
-  #   env_file:
-  #     - ../.env
-  #   working_dir: /usr/src/app
-  #   ports:
-  #     - "${STUDIO_PORT}:5555"
-  #   volumes:
-  #     - ../:/usr/src/app
-  #   command: sh -c "yarn prisma studio --port 5555 --hostname 0.0.0.0"
-
-# volumes:
-#   docker_pgdata:
-
-
-
-
-
-# services:
-#   app:
-#     build:
-#       context: ..
-#       dockerfile: docker/Dockerfile
-#     container_name: booking_app
-#     env_file:
-#       - ../.env
-#     depends_on:
-#       - postgres
-#     working_dir: /usr/src/app
-#     ports:
-#       - "${APP_PORT}:3000"
-#     command: sh docker/entrypoint.sh
-
-#   postgres:
-#     image: postgres:16
-#     container_name: booking_postgres
-#     env_file:
-#       - ../.env
-#     ports:
-#       - "${DB_PORT}:5432"
-#     volumes:
-#       - docker_pgdata:/var/lib/postgresql/data
-
-#   prisma-studio:
-#     image: node:20-alpine
-#     container_name: booking_prisma_studio
-#     env_file:
-#       - ../.env
-#     working_dir: /usr/src/app
-#     ports:
-#       - "${STUDIO_PORT}:5555"
-#     command: sh -c "yarn prisma studio --port 5555 --hostname 0.0.0.0"
-
-# volumes:
-#   docker_pgdata:
-
-
-
-
-
-
-
-
-
-
-
-
-# services:
-#   app:
-#     build:
-#       context: ..
-#       dockerfile: docker/Dockerfile
-#     container_name: booking_app
-#     env_file:
-#       - ../.env
-#     depends_on:
-#       - postgres
-#     working_dir: /usr/src/app
-#     ports:
-#       - "${APP_PORT}:${APP_PORT}"
-#     command: sh docker/entrypoint.sh
-
-#   postgres:
-#     image: postgres:16
-#     container_name: booking_postgres
-#     env_file:
-#       - ../.env
-#     ports:
-#       - "${DB_PORT}:${DB_PORT}"
-#     volumes:
-#       - docker_pgdata:/var/lib/postgresql/data
-
-#   prisma-studio:
-#     build:
-#       context: ..
-#       dockerfile: docker/Dockerfile
-#     container_name: booking_prisma_studio
-#     env_file:
-#       - ../.env
-#     working_dir: /usr/src/app
-#     ports:
-#       - "${STUDIO_PORT}:${STUDIO_PORT}"
-#     command: sh -c "yarn prisma studio --port $STUDIO_PORT --host 0.0.0.0"
-
-# volumes:
-#   docker_pgdata:
-
-
-
-
-# services:
-#   app:
-#     build:
-#       context: ..
-#       dockerfile: docker/Dockerfile
-#     container_name: booking_app
-#     env_file:
-#       - ../.env
-#     depends_on:
-#       - postgres
-#     working_dir: /usr/src/app
-#     ports:
-#       - "${APP_PORT}:${APP_PORT}"
-#     command: sh docker/entrypoint.sh
-
-#   postgres:
-#     image: postgres:16
-#     container_name: booking_postgres
-#     env_file:
-#       - ../.env
-#     ports:
-#       - "${DB_PORT}:${DB_PORT}"
-#     volumes:
-#       - docker_pgdata:/var/lib/postgresql/data
-
-#   prisma-studio:
-#     build:
-#       context: ..
-#       dockerfile: docker/Dockerfile
-#     container_name: booking_prisma_studio
-#     env_file:
-#       - ../.env
-#     working_dir: /usr/src/app
-#     ports:
-#       - "${STUDIO_PORT}:${STUDIO_PORT}"
-#     command: sh -c "yarn prisma studio --host 0.0.0.0 --port ${STUDIO_PORT}"
-
-# volumes:
-#   docker_pgdata:
-
-
-
-
-
-
-# services:
-#   app:
-#     build:
-#       context: ..
-#       dockerfile: docker/Dockerfile
-#     container_name: booking_app
-#     env_file:
-#       - ../.env
-#     depends_on:
-#       - postgres
-#     working_dir: /usr/src/app
-#     ports:
-#       - "${APP_PORT}:${APP_PORT}"       # NestJS app
-#       - "${STUDIO_PORT}:${STUDIO_PORT}" # Prisma Studio (если нужно прямо из app)
-#     command: sh docker/entrypoint.sh
-
-#   postgres:
-#     image: postgres:16
-#     container_name: booking_postgres
-#     env_file:
-#       - ../.env
-#     ports:
-#       - "${DB_PORT}:${DB_PORT}"
-#     volumes:
-#       - docker_pgdata:/var/lib/postgresql/data
-#     healthcheck:
-#       test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}"]
-#       interval: 3s
-#       timeout: 5s
-#       retries: 10
-
-#   prisma-studio:
-#     build:
-#       context: ..
-#       dockerfile: docker/Dockerfile
-#     container_name: booking_prisma_studio
-#     env_file:
-#       - ../.env
-#     working_dir: /usr/src/app
-#     depends_on:
-#       - postgres
-#     ports:
-#       - "${STUDIO_PORT}:${STUDIO_PORT}"
-#     command: sh -c "yarn prisma studio --host 0.0.0.0 --port ${STUDIO_PORT}"
-
-# volumes:
-#   docker_pgdata:
-
-
-
-
-
-
-# services:
-#   app:
-#     build:
-#       context: ..
-#       dockerfile: docker/Dockerfile
-#     container_name: booking_app
-#     env_file:
-#       - ../.env
-#     depends_on:
-#       - postgres
-#     working_dir: /usr/src/app
-#     ports:
-#       - "${APP_PORT}:${APP_PORT}"
-#     command: sh docker/entrypoint.sh
-
-#   postgres:
-#     image: postgres:16
-#     container_name: booking_postgres
-#     env_file:
-#       - ../.env
-#     ports:
-#       - "${DB_PORT}:${DB_PORT}"
-#     volumes:
-#       - docker_pgdata:/var/lib/postgresql/data
-
-#   prisma-studio:
-#     image: node:20-alpine
-#     container_name: booking_prisma_studio
-#     env_file:
-#       - ../.env
-#     working_dir: /usr/src/app
-#     ports:
-#       - "${STUDIO_PORT}:${STUDIO_PORT}"
-#     command: sh -c "while true; do sleep 1000; done"
-
-# volumes:
-#   docker_pgdata:
-
-
-
-
-# services:
-#   app:
-#     build:
-#       context: .
-#       dockerfile: ./docker/Dockerfile
-#     container_name: booking_app
-#     env_file:
-#       - ../.env
-#     ports:
-#       - "3000:3000"
-#     depends_on:
-#       - postgres
-#     volumes:
-#       - .:/usr/src/app
-#     working_dir: /usr/src/app
-
-#   postgres:
-#     image: postgres:16
-#     container_name: booking_postgres
-#     env_file:
-#       - ../.env
-#     ports:
-#       - "5432:5432"
-#     volumes:
-#       - docker_pgdata:/var/lib/postgresql/data
-
-#   prisma-studio:
-#     image: node:20-alpine
-#     container_name: booking_prisma_studio
-#     env_file:
-#       - ../.env
-#     working_dir: /usr/src/app
-#     volumes:
-#       - .:/usr/src/app
-#     command: yarn prisma studio
-#     ports:
-#       - "5555:5555"
-#     depends_on:
-#       - app
-
-# volumes:
-#   docker_pgdata:
-
-
-
-
-
-# services:
-#   app:
-#     build:
-#       context: .
-#       dockerfile: ./docker/Dockerfile
-#     container_name: booking_app
-#     env_file:
-#       - .env
-#     environment:
-#       DB_HOST: postgres
-#       DB_PORT: 5432
-#       DB_USER: postgres
-#       DB_PASSWORD: postgres
-#       DB_NAME: booking_system
-#     ports:
-#       - "3000:3000"
-#     depends_on:
-#       - postgres
-
-#   postgres:
-#     image: postgres:16
-#     container_name: booking_postgres
-#     environment:
-#       POSTGRES_USER: postgres
-#       POSTGRES_PASSWORD: postgres
-#       POSTGRES_DB: booking_system
-#     ports:
-#       - "5432:5432"
-#     volumes:
-#       - docker_pgdata:/var/lib/postgresql/data
-
-#   prisma-studio:
-#     image: node:20-alpine
-#     container_name: booking_prisma_studio
-#     command: sh -c "yarn prisma studio"
-#     working_dir: /usr/src/app
-#     volumes:
-#       - .:/usr/src/app
-#     ports:
-#       - "5555:5555"
-#     depends_on:
-#       - postgres
-
-# volumes:
-#   docker_pgdata:
-
-
-
-# services:
-#   app:
-#     image: booking-app
-#     build:
-#       context: ..
-#       dockerfile: ./docker/Dockerfile
-#     container_name: booking_app
-#     working_dir: /usr/src/app
-#     command: ["yarn", "start:dev"]
-#     volumes:
-#       - .:/usr/src/app
-#       - /usr/src/app/node_modules
-#     ports:
-#       - "3000:3000"
-#     environment:
-#       DATABASE_URL: "postgresql://postgres:postgres@postgres:5432/booking_system?schema=public"
-#     depends_on:
-#       - postgres
-#     entrypoint: ["sh", "docker/entrypoint.sh"]
-
-#   postgres:
-#     image: postgres:16
-#     container_name: booking_postgres
-#     restart: always
-#     environment:
-#       POSTGRES_USER: postgres
-#       POSTGRES_PASSWORD: postgres
-#       POSTGRES_DB: booking_system
-#     ports:
-#       - "5432:5432"
-#     volumes:
-#       - docker_pgdata:/var/lib/postgresql/data
-
-#   prisma-studio:
-#     image: node:20-alpine
-#     container_name: booking_prisma_studio
-#     working_dir: /usr/src/app
-#     command: ["yarn", "prisma:studio"]
-#     ports:
-#       - "5555:5555"
-#     volumes:
-#       - .:/usr/src/app
-#       - /usr/src/app/node_modules
-#     depends_on:
-#       - postgres
-
-# volumes:
-#   docker_pgdata:
-
-
-
-
-# services:
-#   app:
-#     image: booking-app
-#     build:
-#       context: .
-#       dockerfile: Dockerfile
-#     container_name: booking_app
-#     working_dir: /usr/src/app
-#     command: ["yarn", "start:dev"]
-#     volumes:
-#       - .:/usr/src/app
-#       - /usr/src/app/node_modules
-#     ports:
-#       - "3000:3000"
-#     environment:
-#       DATABASE_URL: "postgresql://postgres:postgres@postgres:5432/booking_system?schema=public"
-#     depends_on:
-#       - postgres
-#     entrypoint: ["sh", "docker/entrypoint.sh"]
-
-#   postgres:
-#     image: postgres:16
-#     container_name: booking_postgres
-#     restart: always
-#     environment:
-#       POSTGRES_USER: postgres
-#       POSTGRES_PASSWORD: postgres
-#       POSTGRES_DB: booking_system
-#     ports:
-#       - "5432:5432"
-#     volumes:
-#       - docker_pgdata:/var/lib/postgresql/data
-
-#   prisma-studio:
-#     image: node:20-alpine
-#     container_name: booking_prisma_studio
-#     working_dir: /usr/src/app
-#     command: ["yarn", "prisma:studio"]
-#     ports:
-#       - "5555:5555"
-#     volumes:
-#       - .:/usr/src/app
-#       - /usr/src/app/node_modules
-#     depends_on:
-#       - postgres
-
-# volumes:
-#   docker_pgdata:
-
-
-
-
-
-
-# services:
-#   postgres:
-#     image: postgres:16
-#     container_name: booking_postgres
-#     environment:
-#       POSTGRES_USER: postgres
-#       POSTGRES_PASSWORD: postgres
-#       POSTGRES_DB: booking_system
-#     ports:
-#       - "5432:5432"
-#     volumes:
-#       - pgdata:/var/lib/postgresql/data
-
-#   app:
-#     build:
-#       context: ..
-#       dockerfile: docker/Dockerfile
-#     container_name: booking_app
-#     ports:
-#       - "3000:3000"
-#     environment:
-#       DATABASE_URL: postgres://postgres:postgres@postgres:5432/booking_system
-#       NODE_ENV: development
-#     depends_on:
-#       - postgres
-#     volumes:
-#       - ..:/usr/src/app
-#     command: ["sh", "docker/entrypoint.sh"]
-
-#   prisma-studio:
-#     image: node:20-alpine
-#     container_name: booking_prisma_studio
-#     working_dir: /usr/src/app
-#     volumes:
-#       - ..:/usr/src/app
-#     ports:
-#       - "5555:5555"
-#     command: ["npx", "prisma", "studio"]
-#     depends_on:
-#       - postgres
-
-# volumes:
-#   pgdata:
-
-
-
-# # services:
-# #   postgres:
-# #     image: postgres:16
-# #     container_name: booking_postgres
-# #     restart: always
-# #     environment:
-# #       POSTGRES_USER: postgres
-# #       POSTGRES_PASSWORD: postgres
-# #       POSTGRES_DB: booking_system
-# #     ports:
-# #       - "5432:5432"
-# #     volumes:
-# #       - pgdata:/var/lib/postgresql/data
-
-# #   app:
-# #     build:
-# #       context: ..
-# #       dockerfile: docker/Dockerfile
-# #     container_name: booking_app
-# #     restart: always
-# #     depends_on:
-# #       - postgres
-# #     environment:
-# #       DATABASE_URL: postgres://postgres:postgres@postgres:5432/booking_system
-# #       NODE_ENV: development
-# #     ports:
-# #       - "3000:3000"
-# #     volumes:
-# #       - ..:/usr/src/app
-# #       - /usr/src/app/node_modules
-# #     command: sh -c "npx prisma migrate deploy && npm run start:dev"
-
-# #   prisma-studio:
-# #     image: node:20-alpine
-# #     container_name: booking_prisma_studio
-# #     working_dir: /usr/src/app
-# #     depends_on:
-# #       - postgres
-# #     environment:
-# #       DATABASE_URL: postgres://postgres:postgres@postgres:5432/booking_system
-# #     volumes:
-# #       - ..:/usr/src/app
-# #     ports:
-# #       - "5555:5555"
-# #     command: sh -c "npx prisma studio"
-
-# # volumes:
-# #   pgdata:
